--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                 </ul>
                 <h2>My favourite Picture</h2>
-                <img src="images/Indianflag.jpg" id="flag" alt="Own flag" width="250" height="250">
+                <img src="images/Indianflag.jpg" alt="Own flag" width="250" height="250">
                 <aside>
 
 
