--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 
         <div class="Webpage">
+            <div class="flex-container"></div>
 
 
             <a href="index.html" class="Webpage-button">Home</a>
